@@ -55,7 +55,7 @@ subtest {
 
 subtest {
     plan 3;
-    my %data = run-psgi-request($app, 'GET', '/readsession', http_cookie => "$session-cookie-name=$first-session-id");
+    my %data = run-psgi-request($app, 'GET', '/readsession', headers => { http_cookie => "$session-cookie-name=$first-session-id" });
     my $response = %data<response>;
     is $response[0], 200, 'With session HTTP status 200';
     my %header = $response[1];
@@ -75,7 +75,7 @@ subtest {
         $wrong-session-id.substr-rw(0,1) = '2';
     }
 
-    my %data = run-psgi-request($app, 'GET', '/readsession', http_cookie => "$session-cookie-name=$wrong-session-id");
+    my %data = run-psgi-request($app, 'GET', '/readsession', headers => { http_cookie => "$session-cookie-name=$wrong-session-id" });
     my $response = %data<response>;
     is $response[0], 200, 'With session HTTP status 200';
     my %header = $response[1];
@@ -90,7 +90,7 @@ subtest {
     # let the cookie expire!
     sleep 6;
 
-    my %data = run-psgi-request($app, 'GET', '/readsession', http_cookie => "$session-cookie-name=$first-session-id");
+    my %data = run-psgi-request($app, 'GET', '/readsession', headers => { http_cookie => "$session-cookie-name=$first-session-id" });
     my $response = %data<response>;
     is $response[0], 200, 'With session HTTP status 200';
     my %header = $response[1];
@@ -109,7 +109,7 @@ subtest {
 
 subtest {
     plan 1;
-    my %data = run-psgi-request($app, 'GET', '/deletesession', http_cookie => "$session-cookie-name=$second-session-id");
+    my %data = run-psgi-request($app, 'GET', '/deletesession', headers => { http_cookie => "$session-cookie-name=$second-session-id" });
     is-deeply %data<response>, [200, ["Content-Type" => "text/html"], 'session should be deleted'], 'Session deletion';
 }, 'Session deletion';
 
