@@ -63,15 +63,15 @@ is $response[1][1].key, "Set-Cookie", "session cookie";
 my ($session-cookie-name, $value) = $response[1][1].value.trim.split(/\s*\=\s*/, 2);
 my $session-id = $value.split(/<[;&]>/)[0];
 
-$response = get-psgi-response($app, 'GET', '/app/something', http_cookie => "$session-cookie-name=$session-id");
+$response = get-psgi-response($app, 'GET', '/app/something', headers => { http_cookie => "$session-cookie-name=$session-id" });
 is $response[0], 200, "login successful - statuscode 200";
 is $response[1][0].key, "Content-Type", "Content-Type found";
 is $response[1][0].value, "text/plain", "Content-Type is text/plain";
 is $response[2], "no need to check if we're logged in", "access to the app without checking session in the route";
 
-$response = get-psgi-response($app, 'GET', '/app/logout', http_cookie => "$session-cookie-name=$session-id");
+$response = get-psgi-response($app, 'GET', '/app/logout', headers => { http_cookie => "$session-cookie-name=$session-id" });
 is-deeply $response, [200, [:Content-Type("text/html")], "logged out"] , "logged out";
 
 # get the login page again, because we're not logged in -> catch all again
-$response = get-psgi-response($app, 'GET', '/app/logout', http_cookie => "$session-cookie-name=$session-id");
+$response = get-psgi-response($app, 'GET', '/app/logout', headers => { http_cookie => "$session-cookie-name=$session-id" });
 is-deeply $response, [200, [:Content-Type("text/html")], "this is the login page / catch all route"], "logout 2nd time - catchall";
