@@ -2,6 +2,7 @@
     - Ticket #177 - Route matching on / or "end of URI" works better
     - Ticket #190 - Added syntactic suggar for static-dir routes
     - Ticket #189 - views directory is relative to where the application script is when it is in a directory called 'bin'. 
+    - Ticket #196 - Pass arbitrary header to run-psgi-request
 
 0.0.7 2017.07.04
     - Ticket #164 - bin/bailador version should work even after installation 
